--- a/Discuz/Discuz.WinPhone/App.xaml
+++ b/Discuz/Discuz.WinPhone/App.xaml
@@ -35,8 +35,73 @@
                         </StackPanel>
                     </DataTemplate>
 
+                    <Style TargetType="Button">
+                        <Setter Property="Background" Value="#666666"/>
+                        <Setter Property="BorderBrush" Value="#183037"/>
+                        <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
+                        <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
+                        <Setter Property="Padding" Value="10,5,10,6"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Grid>
+                                        <VisualStateManager.VisualStateGroups>
+                                            <VisualStateGroup x:Name="CommonStates">
+                                                <VisualState x:Name="Normal"/>
+                                                <VisualState x:Name="MouseOver"/>
+                                                <VisualState x:Name="Pressed">
+                                                    <Storyboard>
+                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentContainer">
+                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneButtonBasePressedForegroundBrush}"/>
+                                                        </ObjectAnimationUsingKeyFrames>
+                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="ButtonBackground">
+                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
+                                                        </ObjectAnimationUsingKeyFrames>
+                                                    </Storyboard>
+                                                </VisualState>
+                                                <VisualState x:Name="Disabled">
+                                                    <Storyboard>
+                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentContainer">
+                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledBrush}"/>
+                                                        </ObjectAnimationUsingKeyFrames>
+                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="ButtonBackground">
+                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledBrush}"/>
+                                                        </ObjectAnimationUsingKeyFrames>
+                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="ButtonBackground">
+                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="Transparent"/>
+                                                        </ObjectAnimationUsingKeyFrames>
+                                                    </Storyboard>
+                                                </VisualState>
+                                            </VisualStateGroup>
+                                        </VisualStateManager.VisualStateGroups>
+                                        <Border x:Name="ButtonBackground" 
+                                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                                Background="#263841"
+                                                CornerRadius="3" 
+                                                Margin="{StaticResource PhoneTouchTargetOverhang}">
+                                            <Grid Background="{TemplateBinding Background}">
+                                                <ContentControl x:Name="ContentContainer" 
+                                                            ContentTemplate="{TemplateBinding ContentTemplate}" 
+                                                            Content="{TemplateBinding Content}" 
+                                                            Foreground="{TemplateBinding Foreground}" 
+                                                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                                            Padding="{TemplateBinding Padding}" 
+                                                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                            </Grid>
+                                        </Border>
+                                    </Grid>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
 
 
+                    <Style TargetType="phone:PivotItem">
+                        <Setter Property="Margin" Value="0" />
+                    </Style>
 
                     <Style x:Key="PivotHeadersControlStyle1" TargetType="Primitives:PivotHeadersControl">
                         <Setter Property="ItemsPanel">
@@ -64,8 +129,6 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
-
-
 
                     <Style x:Key="MyPivot" TargetType="phone:Pivot">
                         <Setter Property="Margin" Value="0"/>
