--- a/Discuz/Discuz/App.xaml
+++ b/Discuz/Discuz/App.xaml
@@ -20,7 +20,12 @@
         <Setter Property="FontSize" Value="20" />
         <Setter Property="TextColor" Value="#eeeeee" />
       </Style>
-      
+
+      <Style x:Key="TitleLabel2" TargetType="Label">
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="TextColor" Value="#999999" />
+      </Style>
+
       <Style x:Key="DescLabel" TargetType="Label">
         <Setter Property="FontSize" Value="15" />
         <Setter Property="TextColor" Value="#cccccc" />
