--- a/Discuz/Discuz/Views/ForumDisplayView.xaml
+++ b/Discuz/Discuz/Views/ForumDisplayView.xaml
@@ -29,8 +29,8 @@
         <ViewCell>
           <StackLayout Padding="5,1">
             <!--<ctrls:Border Style="{StaticResource BlockBorder}">-->
-              <ContentView cal:View.Model="{Binding }" />
-            <BoxView Color="Gray" HeightRequest="1" />
+            <ContentView cal:View.Model="{Binding }" />
+            <BoxView Color="#55999999" HeightRequest="0.5" />
             <!--</ctrls:Border>-->
           </StackLayout>
         </ViewCell>
