--- a/Discuz/Discuz.WinPhone/MainPage.xaml
+++ b/Discuz/Discuz.WinPhone/MainPage.xaml
@@ -27,9 +27,9 @@
         </local:TilePanel>
         <StackPanel Orientation="Horizontal" Margin="10,0" Grid.Row="0" VerticalAlignment="Center">
             <Image Source="icon.png" Width="40" Height="40" Margin="0,0,10,0" />
-            <TextBlock Text="蓝色理想" VerticalAlignment="Center" />
+            <TextBlock Text="{Binding Title}" VerticalAlignment="Center" />
         </StackPanel>
-        
+
         <ContentPresenter x:Name="mainBody" Grid.Row="1" />
     </Grid>
 
