--- a/Discuz/Discuz/Views/PostDetailView.xaml
+++ b/Discuz/Discuz/Views/PostDetailView.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ctrls="clr-namespace:Discuz.Controls;assembly=Discuz"
              x:Class="Discuz.Views.PostDetailView">
 
   <Grid>
@@ -13,11 +14,13 @@
     </Grid.ColumnDefinitions>
 
     <StackLayout>
-      <Image WidthRequest="50"
-       HeightRequest="50"
-       Source="{Binding Data.AuthorImg}"
-       Aspect="AspectFit"
+      <ctrls:CycleBox BackgroundColor="Green" Radius="25">
+        <Image WidthRequest="50"
+         HeightRequest="50"
+         Source="{Binding Data.AuthorImg}"
+         Aspect="AspectFit"
            />
+      </ctrls:CycleBox>
       <Label Text="{Binding Data.Author}" Style="{StaticResource DetailLabel}" HorizontalOptions="Center" />
       <Label Text="{Binding Data.Date, Converter={StaticResource HtmlClear}}" Style="{StaticResource DetailLabel}" HorizontalOptions="Center" />
     </StackLayout>
