--- a/Discuz/Discuz.WinPhone/MainPage.xaml
+++ b/Discuz/Discuz.WinPhone/MainPage.xaml
@@ -17,11 +17,34 @@
     shell:SystemTray.Opacity="0"
     Background="#1e5263"
     >
-    <!--shell:SystemTray.BackgroundColor="#2ba9d3"-->
+
+    <!--XF For WP 的页面跳转动画被写死在 Platform SetCurrent 方法中-->
+    <!--xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"-->
+    <!--<toolkit:TransitionService.NavigationInTransition>
+        <toolkit:NavigationInTransition>
+            <toolkit:NavigationInTransition.Backward>
+                <toolkit:RotateTransition Mode="In180Clockwise"/>
+            </toolkit:NavigationInTransition.Backward>
+            <toolkit:NavigationInTransition.Forward>
+                <toolkit:RotateTransition Mode="In180Clockwise"/>
+            </toolkit:NavigationInTransition.Forward>
+        </toolkit:NavigationInTransition>
+    </toolkit:TransitionService.NavigationInTransition>
+    <toolkit:TransitionService.NavigationOutTransition>
+        <toolkit:NavigationOutTransition>
+            <toolkit:NavigationOutTransition.Backward>
+                <toolkit:RotateTransition Mode="Out180Clockwise"/>
+            </toolkit:NavigationOutTransition.Backward>
+            <toolkit:NavigationOutTransition.Forward>
+                <toolkit:RotateTransition Mode="Out180Clockwise"/>
+            </toolkit:NavigationOutTransition.Forward>
+        </toolkit:NavigationOutTransition>
+    </toolkit:TransitionService.NavigationOutTransition>-->
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="15" /><!-- for SystemTray -->
+            <RowDefinition Height="15" />
+            <!-- for SystemTray -->
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
