--- a/Discuz/Discuz/Views/ForumIndexView.xaml
+++ b/Discuz/Discuz/Views/ForumIndexView.xaml
@@ -8,8 +8,8 @@
 
   <ContentPage.ToolbarItems>
     <ToolbarItem Text="刷新" Icon="refresh.png" Command="{Binding RefreshCmd}" Priority="0" />
-    <ToolbarItem Text="顶部" Icon="top.png" Command="{Binding GotoTopCmd}" CommandParameter="{Binding Source={x:Reference lst}}" />
-    <ToolbarItem Text="底部" Icon="bottom.png" Command="{Binding GotoBottomCmd}" CommandParameter="{Binding Source={x:Reference lst}}"  />
+    <ToolbarItem Text="顶部" Icon="top.png" Command="{Binding GotoTopCmd}" CommandParameter="{Binding Source={x:Reference lst}}" Order="Secondary" />
+    <ToolbarItem Text="底部" Icon="bottom.png" Command="{Binding GotoBottomCmd}" CommandParameter="{Binding Source={x:Reference lst}}" Order="Secondary"  />
     <ToolbarItem Text="浏览器中打开" Icon="bottom.png" Command="{Binding OpenInBrowserCmd}" CommandParameter="{Binding Source={x:Reference lst}}" Order="Secondary" />
   </ContentPage.ToolbarItems>
 
@@ -26,7 +26,7 @@
           <ViewCell.View>
             <StackLayout Orientation="Horizontal" Padding="10">
               <BoxView WidthRequest="10" HeightRequest="10" Color="Green" VerticalOptions="Center" />
-              <Label Text="{Binding Title}" />
+              <Label Text="{Binding Title}" Style="{StaticResource TitleLabel2}" />
             </StackLayout>
           </ViewCell.View>
         </ViewCell>
@@ -37,9 +37,12 @@
         <ViewCell>
           <ViewCell.View>
             <StackLayout Padding="5,1">
-              <ctrls:Border Style="{StaticResource BlockBorder}">
+              <!--<ctrls:Border Style="{StaticResource BlockBorder}">
                 <ContentView cal:View.Model="{Binding }" />
-              </ctrls:Border>
+              </ctrls:Border>-->
+              <Frame>
+                <ContentView cal:View.Model="{Binding }" />
+              </Frame>
             </StackLayout>
           </ViewCell.View>
         </ViewCell>
